--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -23,6 +23,9 @@ jobs:
 
     - name: Setup Prisma
       run: npx prisma generate
+
+    - name: Setup Environment
+      run: cp .env.example .env
     
     - name: Build
       run: npm run build --if-present
