--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "type-check": "tsc --noEmit",
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push",
-    "db:deploy": "npx prisma migrate deploy"
+    "db:deploy": "npx prisma migrate deploy",
+    "infra:up": "cd infra && docker-compose up -d"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -36,6 +37,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.18.2",
+    "ioredis": "^5.6.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.323.0",
     "next": "^14.2.4",
