--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,12 +5,29 @@ services:
     image: redis:7.4.2
     container_name: pontim-redis
     restart: always
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
+    networks:
+      - pontim-network
+    ports: 
+      - "127.0.0.1:6379:6379"
+  
+  pontim:
+    image: ghcr.io/italomedici/pontim:main
+    container_name: pontim-app
+    ports:
+      - "80:3000"
+    depends_on:
+      - redis
+    restart: always
+    networks:
+      - pontim-network
 
 volumes:
   redis_data:
     driver: local
+
+networks:
+  pontim-network:
+    driver: bridge
