--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push",
     "db:deploy": "npx prisma migrate deploy",
-    "infra:up": "cd infra && docker-compose up -d"
+    "infra:up": "cd infra && docker-compose up -d",
+    "infra:redis:up": "cd infra && docker-compose up redis"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
