--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
 STRIPE_PUBLISH_KEY=STRIPE_PUBLISH_KEY
 STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
 FREE_PLAN_PRICE_ID=FREE_PLAN_PRICE_ID
+REDIS_URL=REDIS_URL
 
 RESEND_API_KEY=RESEND_API_KEY
 GA_ID=GA_ID
