--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -20,7 +20,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
           source: "infra/docker-compose.yml"
-          target: "~/infra/docker-compose.yml"
+          target: "~/pontim"
 
       - name: Check if Redis is running
         uses: appleboy/ssh-action@master
@@ -32,7 +32,7 @@ jobs:
             echo "Checking if Redis is running..."
             if ! docker ps --filter "name=pontim-redis" --filter "status=running" | grep "pontim-redis"; then
               echo "Redis is not running. Starting Redis..."
-              docker-compose -f ~/infra/docker-compose.yml up -d redis
+              docker compose -f ~/pontim/infra/docker-compose.yml up -d redis
               echo "Redis started."
               docker ps
             else
@@ -46,19 +46,19 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
-            cd ~/infra
+            cd ~/pontim/infra
             
             echo "Pulling the latest image..."
-            docker-compose pull pontim
+            docker compose pull pontim
             
             echo "Stopping the current container..."
-            docker-compose stop pontim
+            docker compose stop pontim
             
             echo "Removing the current container..."
-            docker-compose rm -f pontim
+            docker compose rm -f pontim
             
             echo "Starting the new container..."
-            docker-compose up -d pontim
+            docker compose up -d pontim
 
             echo "Current running containers:"
             docker ps
