feat(metrics): setup loki logger

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ STRIPE_PUBLISH_KEY=STRIPE_PUBLISH_KEY
 STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
 FREE_PLAN_PRICE_ID=FREE_PLAN_PRICE_ID
 REDIS_URL=REDIS_URL
+LOKI_URL=LOKI_URL
 
 RESEND_API_KEY=RESEND_API_KEY
 GA_ID=GA_ID
