ci: update image without downtime

--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -56,10 +56,7 @@ jobs:
 
             echo "🔄 Updating pontim-app..."
 
-            docker compose stop pontim
-            docker compose rm -f pontim
-            docker compose pull pontim
-            docker compose up -d pontim
+            docker compose up -d --no-deps --pull always pontim
 
             echo "🚀 pontim-app updated!"
             docker ps
