ci: copy entire file to vps

--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -19,7 +19,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
-          source: "infra/docker-compose.yml"
+          source: "infra"
           target: "~/pontim"
 
       - name: Ensure essential containers are running
