--- a/infra/prometheus/prometheus.yml
+++ b/infra/prometheus/prometheus.yml
@@ -13,4 +13,4 @@ scrape_configs:
   - job_name: 'pontim-app'
     metrics_path: /api/metrics
     static_configs:
-      - targets: ['host.docker.internal:3000']
+      - targets: ['pontim:3000']
