--- a/infra/nginx/sites/pontim.conf
+++ b/infra/nginx/sites/pontim.conf
@@ -8,4 +8,14 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
+
+  location ~* ^/api/.*/events$ {
+    proxy_pass http://pontim:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Connection '';
+    proxy_buffering off;
+    proxy_cache off;
+    proxy_read_timeout 86400;
+    chunked_transfer_encoding off;
+  }
 }
