--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
 STRIPE_PUBLISH_KEY=STRIPE_PUBLISH_KEY
 STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
 FREE_PLAN_PRICE_ID=FREE_PLAN_PRICE_ID
-REDIS_URL=REDIS_URL
+REDIS_URL=redis://redis:6379
 LOKI_URL=LOKI_URL
 
 RESEND_API_KEY=RESEND_API_KEY
