--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:deploy": "prisma migrate deploy",
+    "db:migrate": "prisma migrate dev",
+    "db:seed": "npx tsx prisma/seed.ts",
     "infra:up": "cd infra && docker-compose up -d",
     "infra:redis:up": "cd infra && docker-compose up redis"
   },
@@ -62,7 +64,6 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.10",
@@ -74,7 +75,6 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prisma": "6.6.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.3.0"
   }
 }
