feat(ads): add google ads script call

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SITE_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
 GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
 
+# Google AdSense
+NEXT_PUBLIC_GOOGLE_ADSENSE_ID=ca-pub-XXXXXXXXXXXXXXXX
+
 STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
 STRIPE_PUBLISH_KEY=STRIPE_PUBLISH_KEY
 STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
