--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -115,6 +115,7 @@ jobs:
             REDIS_URL=${{ secrets.REDIS_URL }}
             GA_ID=${{ secrets.GA_ID }}
             LOKI_URL=${{ secrets.LOKI_URL }}
+            NEXT_PUBLIC_GOOGLE_ADSENSE_ID=${{ secrets.NEXT_PUBLIC_GOOGLE_ADSENSE_ID }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
