chore: add ad free env

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
 FREE_PLAN_PRICE_ID=FREE_PLAN_PRICE_ID
 REDIS_URL=redis://redis:6379
 LOKI_URL=LOKI_URL
+AD_FREE_PLAN_PRICE_ID=AD_FREE_PLAN_PRICE_ID
 
 RESEND_API_KEY=RESEND_API_KEY
 GA_ID=GA_ID
