refactor: adjust payment link env

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ FREE_PLAN_PRICE_ID=FREE_PLAN_PRICE_ID
 REDIS_URL=redis://redis:6379
 LOKI_URL=LOKI_URL
 AD_FREE_PLAN_PRICE_ID=AD_FREE_PLAN_PRICE_ID
-NEXT_PUBLIC_STRIPE_PAYMENT_LINK=NEXT_PUBLIC_STRIPE_PAYMENT_LINK
+NEXT_PUBLIC_STRIPE_PAYMENT_LINK=https://payment-link.com
 
 RESEND_API_KEY=RESEND_API_KEY
 GA_ID=GA_ID
