--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lucide-react": "^0.323.0",
     "next": "^14.2.25",
     "next-auth": "^4.24.7",
+    "next-intl": "^4.3.9",
     "next-themes": "^0.2.1",
     "pino": "^9.6.0",
     "pino-loki": "^2.5.0",
