--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.18.2",
     "ioredis": "^5.6.0",
+    "jose": "^6.1.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.323.0",
     "next": "^14.2.25",
