feat(instant-room): Create temporary data cleanup

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ NEXT_PUBLIC_STRIPE_PAYMENT_LINK=https://payment-link.com
 
 RESEND_API_KEY=RESEND_API_KEY
 GA_ID=GA_ID
+
+# Cleanup endpoint security
+CLEANUP_SECRET=some-random-secret-for-cleanup-endpoint
