--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -118,6 +118,7 @@ jobs:
             NEXT_PUBLIC_GOOGLE_ADSENSE_ID=${{ secrets.NEXT_PUBLIC_GOOGLE_ADSENSE_ID }}
             AD_FREE_PLAN_PRICE_ID=${{ secrets.AD_FREE_PLAN_PRICE_ID }}
             NEXT_PUBLIC_STRIPE_PAYMENT_LINK=${{ secrets.NEXT_PUBLIC_STRIPE_PAYMENT_LINK }}
+            CLEANUP_SECRET=${{ secrets.CLEANUP_SECRET }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
